--- a/user.html
+++ b/user.html
@@ -45,14 +45,17 @@
         }
     
     </style>
-    
     <main>
-        <section>
+        <section id="info-1">
             <img src="https://images-ext-1.discordapp.net/external/aa_bfM2ExJjwecgrOThs_AzVRwOcOXqATqP1qCvrKGQ/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/577266050769485844/edb37a0f91e84d8204a1458bb97d3317.png"/>
             <article>
-                <b style="--color: red"></b>
-                <h1>5-23#9999</h1><br><h2>나는 5-23이 다ㅏㅏㅏ</h2>
+                <div id="status">🟢 온라인</div>
+                <h1>5-23#9999</h1><br><h2>나는 5-23이 다ㅏㅏㅏ(아님말고) 🎃</h2>
             </article>
+        </section>
+
+        <section id="info-2">
+            <article>{emoji:inv}1000명</article>
         </section>
 
 
@@ -67,4 +70,5 @@ crossorigin="anonymous"></script>
 
 <script src="script/index.js"></script>
 <script src="https://twemoji.maxcdn.com/v/14.0.2/twemoji.min.js" integrity="sha384-32KMvAMS4DUBcQtHG6fzADguo/tpN1Nh6BAJa2QqZc6/i0K+YPQE+bWiqBRAWuFs" crossorigin="anonymous"></script>
+<script src="apis/emoji.js"></script>
 <script>twemoji.parse(document.body)</script>
