--- a/user.html
+++ b/user.html
@@ -26,7 +26,7 @@
             
             height: 75px;
             width: 100%;
-            background-color: var(--perple);
+            background-color: rgb(132, 0, 255);
             align-items: center;
 
             box-shadow: 0px -3px 10px 0px black;
@@ -55,7 +55,7 @@
         </section>
 
         <section id="info-2">
-            <article>{emoji:inv}1000명</article>
+            <b img="{emoji_url:inv}">{emoji:inv}100000</b>
         </section>
 
 
@@ -68,7 +68,7 @@ src="https://code.jquery.com/jquery-3.6.1.min.js"
 integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
 crossorigin="anonymous"></script>
 
-<script src="script/index.js"></script>
 <script src="https://twemoji.maxcdn.com/v/14.0.2/twemoji.min.js" integrity="sha384-32KMvAMS4DUBcQtHG6fzADguo/tpN1Nh6BAJa2QqZc6/i0K+YPQE+bWiqBRAWuFs" crossorigin="anonymous"></script>
-<script src="apis/emoji.js"></script>
 <script>twemoji.parse(document.body)</script>
+<script src="script/index.js"></script>
+<script src="apis/emoji.js"></script>
