--- a/sns.html
+++ b/sns.html
@@ -26,7 +26,7 @@
             
             height: 75px;
             width: 100%;
-            background-color: var(--perple);
+            background-color: rgb(132, 0, 255);
             align-items: center;
 
             box-shadow: 0px -3px 10px 0px black;
